--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ color:#f96311;
 <body>
 <h1>My name is Matthew Hill</h1>
 <p>
-I'm 40 years old with five kids.
-I love playing basketball and video games in
+I'm 40 years old with five kids that are 21, 17, 16, 12, and 8.
+I love playing basketball and working out in my free time.  
 I enjoy cooking and eating deviled eggs without paprika. 
 </p>
 </body>
